testbed/microservice_replication/framework/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-2-checkoutservice-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-2-allow-checkoutservice-1
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-1
    ports:
    - port: 60742
  podSelector:
    matchLabels:
      app: productcatalogservice-2
